# claycomp

./: .env.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: SUPABASE.md  VERCEL_STORAGE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  keys.ts  types.ts
frontend/src/components/: ChatMode.tsx  ColumnSettingsPopover.tsx  EditableCell.tsx  EditableHeader.tsx  SculptorPanel.tsx  SettingsModal.tsx  StopBar.tsx  TableMode.tsx  TableSwitcher.tsx
frontend/src/context/: JobsContext.tsx  SettingsContext.tsx  TableContext.tsx
frontend/src/lib/: runConditions.ts  tableEdits.ts
frontend/src/persistence/: localTables.ts
output/: enriched.csv
src/claycomp/: __init__.py  cli.py  io.py  keys.py  models.py  pipeline.py  records.py
src/claycomp/agents/: enrichment_agent.py
src/claycomp/data/: mlb_teams.json  sample_leads.csv
src/claycomp/email_finder/: __init__.py  ai_ark.py  lead_inputs.py  prospeo.py  types.py  waterfall.py
src/claycomp/enrichers/: __init__.py  area_nickname.py  base.py  baseball_team.py  custom_prompt.py  email_waterfall.py  google_review.py  name_normalizer.py  personal_hook.py  research_tier.py  research_util.py  restaurant.py  unique_offer.py
src/claycomp/llm/: __init__.py  errors.py  providers.py  types.py
supabase/migrations/: 20260713000000_claycomp_schema.sql
tests/: test_excel_import.py  test_run_conditions_and_sculptor_kb.py
(+18 files in other folders)
