[project]
name = "claycomp"
version = "0.1.0"
description = "AI-powered lead enrichment — a Clay alternative"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "httpx>=0.27",
    "openai>=1.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "geopy>=2.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "anthropic>=0.40.0",
]

[project.scripts]
claycomp = "claycomp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claycomp"]
